Repo cleanup: replace backslash-r backslash-n with backslash-n, for easier diffs

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -1237,7 +1237,7 @@
       "Now running. Should take ~30 minutes...\n",
       "\n",
       "Executing `taskset -c 0,1,2,3 ./BrillLindquist_Playground 270 8 2 1.0`...\n",
-      "\u001b[2KIt: 27200 t=199.93 dt=7.35e-03 | 100.0%; ETA 0 s | t/h 963.03 | gp/s 6.29e+05\r\n",
+      "\u001b[2KIt: 27200 t=199.93 dt=7.35e-03 | 100.0%; ETA 0 s | t/h 963.03 | gp/s 6.29e+05\n",
       "Finished executing in 747.6896994113922 seconds.\n",
       "Finished in 747.6993782520294 seconds.\n",
       "\n",
@@ -1415,15 +1415,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n"
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
      ]
     }
    ],
