--- a/Tutorial-Start_to_Finish-FishboneMoncriefID_standalone.ipynb
+++ b/Tutorial-Start_to_Finish-FishboneMoncriefID_standalone.ipynb
@@ -181,17 +181,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-12-02 22:17:15--  http://astro.phys.wvu.edu/zetienne/torus_cuts.csv\r\n",
-      "Resolving astro.phys.wvu.edu (astro.phys.wvu.edu)... 157.182.3.45\r\n",
-      "Connecting to astro.phys.wvu.edu (astro.phys.wvu.edu)|157.182.3.45|:80... connected.\r\n",
-      "HTTP request sent, awaiting response... 200 OK\r\n",
-      "Length: 16445 (16K) [text/csv]\r\n",
-      "Saving to: ‘torus_cuts.csv’\r\n",
-      "\r\n",
-      "torus_cuts.csv      100%[===================>]  16.06K  --.-KB/s    in 0.01s   \r\n",
-      "\r\n",
-      "2019-12-02 22:17:15 (1.08 MB/s) - ‘torus_cuts.csv’ saved [16445/16445]\r\n",
-      "\r\n"
+      "--2019-12-02 22:17:15--  http://astro.phys.wvu.edu/zetienne/torus_cuts.csv\n",
+      "Resolving astro.phys.wvu.edu (astro.phys.wvu.edu)... 157.182.3.45\n",
+      "Connecting to astro.phys.wvu.edu (astro.phys.wvu.edu)|157.182.3.45|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 16445 (16K) [text/csv]\n",
+      "Saving to: ‘torus_cuts.csv’\n",
+      "\n",
+      "torus_cuts.csv      100%[===================>]  16.06K  --.-KB/s    in 0.01s   \n",
+      "\n",
+      "2019-12-02 22:17:15 (1.08 MB/s) - ‘torus_cuts.csv’ saved [16445/16445]\n",
+      "\n"
      ]
     },
     {
