Updated link from cactuscode.org to einsteintoolkit.org

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -1096,7 +1096,7 @@
     "## Step 3.b: `interface.ccl` \\[Back to [top](#toc)\\]\n",
     "$$\\label{interfaceccl}$$\n",
     "\n",
-    "Let's now write `interface.ccl`. The [official Einstein Toolkit (Cactus) documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManual.html) defines what must/should be included in an `interface.ccl` file [**here**](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). "
+    "Let's now write `interface.ccl`. The [official Einstein Toolkit (Cactus) documentation](http://einsteintoolkit.org/usersguide/UsersGuide.html) defines what must/should be included in an `interface.ccl` file [**here**](http://einsteintoolkit.org/usersguide/UsersGuidech12.html#x17-178000D2.2). "
    ]
   },
   {
@@ -1155,7 +1155,7 @@
     "## Step 3.c: `param.ccl` \\[Back to [top](#toc)\\]\n",
     "$$\\label{paramccl}$$\n",
     "\n",
-    "We will now write the file `param.ccl`. This file allows the listed parameters to be set at runtime. We also give allowed ranges and default values for each parameter. More information on this file's syntax can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-265000C2.3). "
+    "We will now write the file `param.ccl`. This file allows the listed parameters to be set at runtime. We also give allowed ranges and default values for each parameter. More information on this file's syntax can be found in the [official Einstein Toolkit documentation](http://einsteintoolkit.org/usersguide/UsersGuidech12.html#x17-183000D2.3). "
    ]
   },
   {
@@ -1293,7 +1293,7 @@
     "## Step 3.d: `schedule.ccl` \\[Back to [top](#toc)\\]\n",
     "$$\\label{scheduleccl}$$\n",
     "\n",
-    "Finally, we will write the file `schedule.ccl`; its official documentation is found [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4). \n",
+    "Finally, we will write the file `schedule.ccl`; its official documentation is found [here](http://einsteintoolkit.org/usersguide/UsersGuidech12.html#x17-186000D2.4). \n",
     "\n",
     "This file declares storage for variables declared in the `interface.ccl`file and specifies when the various parts of the thorn will be run:"
    ]
@@ -1589,7 +1589,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
