Updated links from cactuscode.org to einsteintoolkit.org

--- a/in_progress/old/Tutorial-ETK_thorn-GiRaFFEfood_HO_Exact_Wald.ipynb
+++ b/in_progress/old/Tutorial-ETK_thorn-GiRaFFEfood_HO_Exact_Wald.ipynb
@@ -575,7 +575,7 @@
     "### Step 2.c.i: `interface.ccl` \\[Back to [top](#toc)\\]\n",
     "$$\\label{interface}$$\n",
     "\n",
-    "1. `interface.ccl`: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns. Specifically, this file governs the interaction between this thorn and others; more information can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). \n",
+    "1. `interface.ccl`: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns. Specifically, this file governs the interaction between this thorn and others; more information can be found in the [official Einstein Toolkit documentation](http://einsteintoolkit.org/usersguide/UsersGuidech12.html#x17-178000D2.2). \n",
     "With \"implements\", we give our thorn its unique name. By \"inheriting\" other thorns, we tell the Toolkit that we will rely on variables and functions that exist and are declared \"public\" within those thorns."
    ]
   },
@@ -607,7 +607,7 @@
     "### Step 2.c.ii: `param.ccl` \\[Back to [top](#toc)\\]\n",
     "$$\\label{param}$$\n",
     "\n",
-    "2. `param.ccl`: specifies free parameters within the thorn, enabling them to be set at runtime. It is required to provide allowed ranges and default values for each parameter. More information on this file's syntax can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-265000C2.3)."
+    "2. `param.ccl`: specifies free parameters within the thorn, enabling them to be set at runtime. It is required to provide allowed ranges and default values for each parameter. More information on this file's syntax can be found in the [official Einstein Toolkit documentation](http://einsteintoolkit.org/usersguide/UsersGuidech12.html#x17-183000D2.3)."
    ]
   },
   {
@@ -675,7 +675,7 @@
     "### Step 2.c.iii: `schedule.ccl` \\[Back to [top](#toc)\\]\n",
     "$$\\label{schedule}$$\n",
     "\n",
-    "3. `schedule.ccl`: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions. `schedule.ccl`'s official documentation may be found [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4). \n",
+    "3. `schedule.ccl`: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions. `schedule.ccl`'s official documentation may be found [here](http://einsteintoolkit.org/usersguide/UsersGuidech12.html#x17-186000D2.4). \n",
     "\n",
     "We specify here the standardized ETK \"scheduling bins\" in which we want each of our thorn's functions to run."
    ]
