GiRaFFEfood_NRPy: Update all existing initial data to current standards.

--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb
@@ -120,10 +120,7 @@
     "rfm.reference_metric()\n",
     "\n",
     "# Step 1a: Set commonly used parameters.\n",
-    "thismodule = \"GiRaFFEfood_NRPy_1D\"\n",
-    "# Set the spatial dimension parameter to 3.\n",
-    "par.set_parval_from_str(\"grid::DIM\", 3)\n",
-    "DIM = par.parval_from_str(\"grid::DIM\")\n"
+    "thismodule = \"GiRaFFEfood_NRPy_1D\"\n"
    ]
   },
   {
@@ -144,37 +141,7 @@
     "A_z &= y - \\gamma_\\mu (1-\\mu)x .\n",
     "\\end{align}\n",
     "\n",
-    "However, to take full advantage of NRPy+'s automated function generation capabilities, we want to write this without the `if` statements, replacing them with calls to `fabs()`. To do so, we will use rewrite these functions in terms of maxima and minima. Critically, we will define these functions in the following way: \n",
-    "\\begin{align}\n",
-    "\\min(a,b) &= \\tfrac{1}{2} \\left( a+b - \\lvert a-b \\rvert \\right) \\\\\n",
-    "\\max(a,b) &= \\tfrac{1}{2} \\left( a+b + \\lvert a-b \\rvert \\right). \\\\\n",
-    "\\end{align}\n",
-    "For real numbers, these operate exactly as expected. In the case $a>b$,\n",
-    "\\begin{align}\n",
-    "\\min(a,b) &= \\tfrac{1}{2} \\left( a+b - (a-b) \\right) = b \\\\\n",
-    "\\max(a,b) &= \\tfrac{1}{2} \\left( a+b + (a-b) \\right) = a, \\\\\n",
-    "\\end{align}\n",
-    "and in the case $a<b$, the reverse holds:\n",
-    "\\begin{align}\n",
-    "\\min(a,b) &= \\tfrac{1}{2} \\left( a+b - (b-a) \\right) = a \\\\\n",
-    "\\max(a,b) &= \\tfrac{1}{2} \\left( a+b + (b-a) \\right) = b, \\\\\n",
-    "\\end{align}\n",
-    "\n",
-    "In code, we will represent this as:\n",
-    "```\n",
-    "min_noif(a,b) = sp.Rational(1,2)*(a+b-nrpyAbs(a-b))\n",
-    "max_noif(a,b) = sp.Rational(1,2)*(a+b+nrpyAbs(a-b))\n",
-    "```\n",
-    "Note the `_noif` suffix to avoid conflicts with other functions, and the use of `nrpyAbs()` function, which will always be interpreted as the C function `fabs()` (Sympy `Abs()` may get interpreted as $\\sqrt{zz^*}$, for instance).\n",
-    "\n",
-    "For convenience, we define two new positions, $x^+ = x+0.1/\\gamma_\\mu$ and $x^- = x-0.1/\\gamma_\\mu$. With these tools, we rewrite the $y$-component of the vector potential:\n",
-    "\\begin{align}\n",
-    "A_y =& 1.15 \\gamma_\\mu x - 0.15 \\gamma_\\mu \\left( \\min(x^-,0)-\\max(x^+,0) \\right) \\\\\n",
-    "     &+ g(x) \\frac{\\max(x^-,0) \\min(x^+,0)}{\\max(x^-,\\epsilon) \\min(x^+,\\epsilon)} \\\\\\\n",
-    "     &- 0.015 \\frac{\\min(x^-,0) \\max(x^+,0)}{\\min(x^-,\\epsilon) \\max(x^+,\\epsilon)}\n",
-    "\\end{align}\n",
-    "\n",
-    "First, however, we must set $$\\gamma_\\mu = (1-\\mu^2)^{-1/2}$$ and $$g(x) = \\cos (5\\pi \\gamma_\\mu x)/\\pi$$.\n"
+    "However, to take full advantage of NRPy+'s automated function generation capabilities, we want to write this without the `if` statements, replacing them with calls to `fabs()`. To do so, we will use the NRPy+ module `Min_Max_and_Piecewise_Expressions`."
    ]
   },
   {
@@ -199,12 +166,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we can define the vector potential. We will create three copies of this variable, because the potential is uniquely defined in three zones. Data for $x \\leq -0.1/\\gamma_\\mu$ shall be referred to as \"left\", data for $-0.1/\\gamma_\\mu \\leq x \\leq 0.1/\\gamma_\\mu$ as \"center\", and data for $x \\geq 0.1/\\gamma_\\mu$ as \"right\".\n",
+    "Now, we can define the vector potential. We will rewrite $A_y$ to make use of the functions provided by `Min_Max_and_Piecewise_Expressions`. As shown below, we make sure that at each boundary, each $\\leq$ is paired with a $>$. (This choice is arbitrary, we could just as easily choose $<$ and $\\geq$.) This does not change the data since the function is continuous. However, it is necessary for the functions in `Min_Max_and_Piecewise_Expressions` to output the correct results.\n",
     "\n",
-    "Starting on the left, \n",
     "\\begin{align}\n",
     "A_x &= 0 \\\\\n",
-    "A_y &= \\gamma_\\mu x - 0.015 \\\\\n",
+    "A_y &= \\left \\{ \\begin{array}{lll}\\gamma_\\mu x - 0.015 & \\mbox{if} & x \\leq -0.1/\\gamma_\\mu \\\\\n",
+    "1.15 \\gamma_\\mu x - 0.03g(x) & \\mbox{if} & -0.1/\\gamma_\\mu < x \\leq 0.1/\\gamma_\\mu \\\\ \n",
+    "1.3 \\gamma_\\mu x - 0.015 & \\mbox{if} & x > 0.1/\\gamma_\\mu \\end{array} \\right. , \\\\\n",
     "A_z &= y - \\gamma_\\mu (1-\\mu)x .\n",
     "\\end{align}"
    ]
@@ -215,62 +183,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "AD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"AD\")\n",
-    "AleftD = ixp.zerorank1()\n",
+    "AD = ixp.zerorank1(DIM=3)\n",
     "\n",
-    "AleftD[0] = sp.sympify(0)\n",
-    "AleftD[1] = gammamu*x-0.015\n",
-    "AleftD[2] = y-gammamu*(1-mu_AW)*x"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the center,\n",
-    "\\begin{align}\n",
-    "A_x &= 0 \\\\\n",
-    "A_y &= 1.15 \\gamma_\\mu x - 0.03g(x) \\\\\n",
-    "A_z &= y - \\gamma_\\mu (1-\\mu)x .\n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AcenterD = ixp.zerorank1()\n",
+    "import Min_Max_and_Piecewise_Expressions as noif\n",
+    "bound = sp.sympify(0.1)/gammamu\n",
     "\n",
-    "AcenterD[0] = sp.sympify(0)\n",
-    "AcenterD[1] = 1.15*gammamu*x-0.03*g_AW\n",
-    "AcenterD[2] = y-gammamu*(1-mu_AW)*x"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And on the right,\n",
-    "\\begin{align}\n",
-    "A_x &= 0 \\\\\n",
-    "A_y &= 1.3 \\gamma_\\mu x - 0.015 \\\\\n",
-    "A_z &= y - \\gamma_\\mu (1-\\mu)x .\n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ArightD = ixp.zerorank1()\n",
+    "Ayleft = gammamu*x - sp.sympify(0.015)\n",
+    "Aycenter = sp.sympify(1.15)*gammamu*x - sp.sympify(0.03)*g_AW\n",
+    "Ayright = gammamu*x - sp.sympify(0.015)\n",
     "\n",
-    "ArightD[0] = sp.sympify(0)\n",
-    "ArightD[1] = 1.3*gammamu*x-0.015\n",
-    "ArightD[2] = y-gammamu*(1-mu_AW)*x"
+    "AD[0] = sp.sympify(0.0)\n",
+    "AD[1] = noif.coord_leq_bound(x,-bound)*Ayleft\\\n",
+    "       +noif.coord_greater_bound(x,-bound)*noif.coord_leq_bound(x,bound)*Aycenter\\\n",
+    "       +noif.coord_greater_bound(x,bound)*sp.sympify(1.3)*Ayright\n",
+    "AD[2] = y-gammamu*(sp.sympify(1.0)-mu_AW)*x"
    ]
   },
   {
@@ -287,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -308,35 +234,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now set the magnetic field in the wave frame:\n",
+    "We will now set the magnetic field in the wave frame, once again rewriting $B'^z(x')$ to be compatible with `Min_Max_and_Piecewise_Expressions`:\n",
     "\\begin{align}\n",
     "B'^{x'}(x') = &\\ 1.0,\\ B'^y(x') = 1.0, \\\\\n",
     "B'^z(x') = &\\ \\left \\{ \\begin{array}{lll} 1.0 & \\mbox{if} & x' \\leq -0.1 \\\\\n",
-    "\t\t\t\t1.0+0.15 f(x') & \\mbox{if} & -0.1 \\leq x' \\leq 0.1 \\\\\n",
-    "\t\t\t\t1.3 & \\mbox{if} & x' \\geq 0.1 \\end{array} \\right. .\n",
+    "\t\t\t\t1.0+0.15 f(x') & \\mbox{if} & -0.1 < x' \\leq 0.1 \\\\\n",
+    "\t\t\t\t1.3 & \\mbox{if} & x' > 0.1 \\end{array} \\right. .\n",
     "\\end{align}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "BleftpU = ixp.zerorank1()\n",
-    "BleftpU[0] = sp.sympify(1.0)\n",
-    "BleftpU[1] = sp.sympify(1.0)\n",
-    "BleftpU[2] = sp.sympify(1.0)\n",
+    "Bzleft = sp.sympify(1.0)\n",
+    "Bzcenter = sp.sympify(1.0) + sp.sympify(0.15)*f_AW\n",
+    "Bzright = sp.sympify(1.3)\n",
     "\n",
-    "BcenterpU = ixp.zerorank1()\n",
-    "BcenterpU[0] = sp.sympify(1.0)\n",
-    "BcenterpU[1] = sp.sympify(1.0)\n",
-    "BcenterpU[2] = 1.0 + 0.15*f_AW\n",
-    "\n",
-    "BrightpU = ixp.zerorank1()\n",
-    "BrightpU[0] = sp.sympify(1.0)\n",
-    "BrightpU[1] = sp.sympify(1.0)\n",
-    "BrightpU[2] = sp.sympify(1.3)\n"
+    "BpU = ixp.zerorank1()\n",
+    "BpU[0] = sp.sympify(1.0)\n",
+    "BpU[1] = sp.sympify(1.0)\n",
+    "BpU[2] = noif.coord_leq_bound(x,-bound)*Bzleft\\\n",
+    "        +noif.coord_greater_bound(x,-bound)*noif.coord_leq_bound(x,bound)*Bzcenter\\\n",
+    "        +noif.coord_greater_bound(x,bound)*Bzright\n"
    ]
   },
   {
@@ -353,24 +275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "EleftpU = ixp.zerorank1()\n",
-    "EleftpU[0] = -BleftpU[2]\n",
-    "EleftpU[1] = sp.sympify(0.0)\n",
-    "EleftpU[2] = sp.sympify(1.0)\n",
-    "\n",
-    "EcenterpU = ixp.zerorank1()\n",
-    "EcenterpU[0] = -BcenterpU[2]\n",
-    "EcenterpU[1] = sp.sympify(0.0)\n",
-    "EcenterpU[2] = sp.sympify(1.0)\n",
-    "\n",
-    "ErightpU = ixp.zerorank1()\n",
-    "ErightpU[0] = -BrightpU[2]\n",
-    "ErightpU[1] = sp.sympify(0.0)\n",
-    "ErightpU[2] = sp.sympify(1.0)\n"
+    "EpU = ixp.zerorank1()\n",
+    "EpU[0] = -BpU[2]\n",
+    "EpU[1] = sp.sympify(0.0)\n",
+    "EpU[2] = sp.sympify(1.0)\n"
    ]
   },
   {
@@ -387,24 +299,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "BleftU = ixp.zerorank1()\n",
-    "BleftU[0] = BleftpU[0]\n",
-    "BleftU[1] = gammamu*(BleftpU[1]-mu_AW*EleftpU[2])\n",
-    "BleftU[2] = gammamu*(BleftpU[2]+mu_AW*EleftpU[1])\n",
-    "\n",
-    "BcenterU = ixp.zerorank1()\n",
-    "BcenterU[0] = BcenterpU[0]\n",
-    "BcenterU[1] = gammamu*(BcenterpU[1]-mu_AW*EcenterpU[2])\n",
-    "BcenterU[2] = gammamu*(BcenterpU[2]+mu_AW*EcenterpU[1])\n",
-    "\n",
-    "BrightU = ixp.zerorank1()\n",
-    "BrightU[0] = BrightpU[0]\n",
-    "BrightU[1] = gammamu*(BrightpU[1]-mu_AW*ErightpU[2])\n",
-    "BrightU[2] = gammamu*(BrightpU[2]+mu_AW*ErightpU[1])\n"
+    "BU = ixp.zerorank1()\n",
+    "BU[0] = BpU[0]\n",
+    "BU[1] = gammamu*(BpU[1]-mu_AW*EpU[2])\n",
+    "BU[2] = gammamu*(BpU[2]+mu_AW*EpU[1])\n"
    ]
   },
   {
@@ -421,24 +323,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "EleftU = ixp.zerorank1()\n",
-    "EleftU[0] = EleftpU[0]\n",
-    "EleftU[1] = gammamu*(EleftpU[1]+mu_AW*BleftpU[2])\n",
-    "EleftU[2] = gammamu*(EleftpU[2]-mu_AW*BleftpU[1])\n",
-    "\n",
-    "EcenterU = ixp.zerorank1()\n",
-    "EcenterU[0] = EcenterpU[0]\n",
-    "EcenterU[1] = gammamu*(EcenterpU[1]+mu_AW*BcenterpU[2])\n",
-    "EcenterU[2] = gammamu*(EcenterpU[2]-mu_AW*BcenterpU[1])\n",
-    "\n",
-    "ErightU = ixp.zerorank1()\n",
-    "ErightU[0] = ErightpU[0]\n",
-    "ErightU[1] = gammamu*(ErightpU[1]+mu_AW*BrightpU[2])\n",
-    "ErightU[2] = gammamu*(ErightpU[2]-mu_AW*BrightpU[1])\n"
+    "EU = ixp.zerorank1()\n",
+    "EU[0] = EpU[0]\n",
+    "EU[1] = gammamu*(EpU[1]+mu_AW*BpU[2])\n",
+    "EU[2] = gammamu*(EpU[2]-mu_AW*BpU[1])\n"
    ]
   },
   {
@@ -455,36 +347,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import WeylScal4NRPy.WeylScalars_Cartesian as weyl\n",
     "LeviCivitaSymbolDDD = weyl.define_LeviCivitaSymbol_rank3()\n",
     "\n",
-    "Bleft2 = BleftU[0]*BleftU[0] + BleftU[1]*BleftU[1] + BleftU[2]*BleftU[2]\n",
-    "Bcenter2 = BcenterU[0]*BcenterU[0] + BcenterU[1]*BcenterU[1] + BcenterU[2]*BcenterU[2]\n",
-    "Bright2 = BrightU[0]*BrightU[0] + BrightU[1]*BrightU[1] + BrightU[2]*BrightU[2]\n",
+    "B2 = sp.sympify(0.0)\n",
+    "for i in range(3):\n",
+    "    # In flat spacetime, gamma_{ij} is just a Kronecker delta\n",
+    "    B2 += BU[i]**2 # This is trivial to extend to curved spacetime\n",
     "\n",
-    "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"ValenciavU\")\n",
-    "\n",
-    "ValenciavleftU = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        for k in range(DIM):\n",
-    "            ValenciavleftU[i] += LeviCivitaSymbolDDD[i][j][k] * EleftU[j] * BleftU[k] / Bleft2\n",
-    "            \n",
-    "ValenciavcenterU = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        for k in range(DIM):\n",
-    "            ValenciavcenterU[i] += LeviCivitaSymbolDDD[i][j][k] * EcenterU[j] * BcenterU[k] / Bcenter2\n",
-    "            \n",
-    "ValenciavrightU = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        for k in range(DIM):\n",
-    "            ValenciavrightU[i] += LeviCivitaSymbolDDD[i][j][k] * ErightU[j] * BrightU[k] / Bright2"
+    "ValenciavU = ixp.zerorank1()\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        for k in range(3):\n",
+    "            ValenciavU[i] += LeviCivitaSymbolDDD[i][j][k] * EU[j] * BU[k] / B2\n",
+    "            "
    ]
   },
   {
@@ -504,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -512,24 +392,12 @@
      "output_type": "stream",
      "text": [
       "Consistency check between GiRaFFEfood_NRPy tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
-      "ValenciavleftU[0] - gfho.ValenciavleftU[0] = 0\n",
-      "AleftD[0] - gfho.AleftD[0] = 0\n",
-      "ValenciavcenterU[0] - gfho.ValenciavcenterU[0] = 0\n",
-      "AcenterD[0] - gfho.AcenterD[0] = 0\n",
-      "ValenciavrightU[0] - gfho.ValenciavrightU[0] = 0\n",
-      "ArightD[0] - gfho.ArightD[0] = 0\n",
-      "ValenciavleftU[1] - gfho.ValenciavleftU[1] = 0\n",
-      "AleftD[1] - gfho.AleftD[1] = 0\n",
-      "ValenciavcenterU[1] - gfho.ValenciavcenterU[1] = 0\n",
-      "AcenterD[1] - gfho.AcenterD[1] = 0\n",
-      "ValenciavrightU[1] - gfho.ValenciavrightU[1] = 0\n",
-      "ArightD[1] - gfho.ArightD[1] = 0\n",
-      "ValenciavleftU[2] - gfho.ValenciavleftU[2] = 0\n",
-      "AleftD[2] - gfho.AleftD[2] = 0\n",
-      "ValenciavcenterU[2] - gfho.ValenciavcenterU[2] = 0\n",
-      "AcenterD[2] - gfho.AcenterD[2] = 0\n",
-      "ValenciavrightU[2] - gfho.ValenciavrightU[2] = 0\n",
-      "ArightD[2] - gfho.ArightD[2] = 0\n"
+      "ValenciavU[0] - gfho.ValenciavU[0] = 0\n",
+      "AD[0]         - gfho.AD[0]         = 0\n",
+      "ValenciavU[1] - gfho.ValenciavU[1] = 0\n",
+      "AD[1]         - gfho.AD[1]         = 0\n",
+      "ValenciavU[2] - gfho.ValenciavU[2] = 0\n",
+      "AD[2]         - gfho.AD[2]         = 0\n"
      ]
     }
    ],
@@ -543,14 +411,10 @@
     "\n",
     "print(\"Consistency check between GiRaFFEfood_NRPy tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
-    "for i in range(DIM):\n",
+    "for i in range(3):\n",
     "\n",
-    "    print(\"ValenciavleftU[\"+str(i)+\"] - gfho.ValenciavleftU[\"+str(i)+\"] = \" + str(ValenciavleftU[i] - gfho.ValenciavleftU[i]))\n",
-    "    print(\"AleftD[\"+str(i)+\"] - gfho.AleftD[\"+str(i)+\"] = \" + str(AleftD[i] - gfho.AleftD[i]))\n",
-    "    print(\"ValenciavcenterU[\"+str(i)+\"] - gfho.ValenciavcenterU[\"+str(i)+\"] = \" + str(ValenciavcenterU[i] - gfho.ValenciavcenterU[i]))\n",
-    "    print(\"AcenterD[\"+str(i)+\"] - gfho.AcenterD[\"+str(i)+\"] = \" + str(AcenterD[i] - gfho.AcenterD[i]))\n",
-    "    print(\"ValenciavrightU[\"+str(i)+\"] - gfho.ValenciavrightU[\"+str(i)+\"] = \" + str(ValenciavrightU[i] - gfho.ValenciavrightU[i]))\n",
-    "    print(\"ArightD[\"+str(i)+\"] - gfho.ArightD[\"+str(i)+\"] = \" + str(ArightD[i] - gfho.ArightD[i]))"
+    "    print(\"ValenciavU[\"+str(i)+\"] - gfho.ValenciavU[\"+str(i)+\"] = \" + str(ValenciavU[i] - gfho.ValenciavU[i]))\n",
+    "    print(\"AD[\"+str(i)+\"]         - gfho.AD[\"+str(i)+\"]         = \" + str(AD[i] - gfho.AD[i]))\n"
    ]
   },
   {
@@ -568,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
