--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_Exact_Wald.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_Exact_Wald.ipynb
@@ -100,12 +100,6 @@
     "\n",
     "# Step 1a: Set commonly used parameters.\n",
     "thismodule = \"GiRaFFEfood_NRPy\"\n",
-    "# Set the spatial dimension parameter to 3.\n",
-    "par.set_parval_from_str(\"grid::DIM\", 3)\n",
-    "DIM = par.parval_from_str(\"grid::DIM\")\n",
-    "\n",
-    "# Create a parameter to control the initial data choice. For now, this will only have Exact Wald as an option.\n",
-    "par.initialize_param(par.glb_param(\"char\", thismodule, \"IDchoice\", \"Exact_Wald\"))\n",
     "\n",
     "# Step 1b: Set needed Cparameters\n",
     "M    = par.Cparameters(\"REAL\",thismodule,[\"M\"],1.0)      # The mass of the black hole\n",
@@ -147,12 +141,8 @@
     "# Initialize all components of A and E in the *spherical basis* to zero\n",
     "ASphD = ixp.zerorank1()\n",
     "ESphD = ixp.zerorank1()\n",
-    "if IDchoice == \"Exact_Wald\":\n",
-    "    ASphD[2] = (r * r * sp.sin(theta)**2)/2\n",
-    "    ESphD[2] = 2 * M * sp.sin(theta)**2 / sp.sqrt(1+2*M/r)\n",
-    "else:\n",
-    "    print(\"Error: IDchoice == \"+par.parval_from_str(\"IDchoice\")+\" unsupported!\")\n",
-    "    exit(1)"
+    "ASphD[2] = (r * r * sp.sin(theta)**2)/2\n",
+    "ESphD[2] = 2 * M * sp.sin(theta)**2 / sp.sqrt(1+2*M/r)\n"
    ]
   },
   {
@@ -188,19 +178,21 @@
     "                                       [sp.diff(rfm.xxSph[2],rfm.xx[0]), sp.diff(rfm.xxSph[2],rfm.xx[1]), sp.diff(rfm.xxSph[2],rfm.xx[2])]])\n",
     "#dx__drrefmetric_0UDmatrix = drrefmetric__dx_0UDmatrix.inv() # We don't actually need this in this case.\n",
     "\n",
-    "AD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"AD\")\n",
+    "AD = ixp.zerorank1()\n",
     "ED = ixp.zerorank1()\n",
     "\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
     "        AD[i] = drrefmetric__dx_0UDmatrix[(j,i)]*ASphD[j]\n",
     "        ED[i] = drrefmetric__dx_0UDmatrix[(j,i)]*ESphD[j]\n",
     "\n",
-    "#Step 4: Register the basic spacetime quantities\n",
-    "alpha   = gri.register_gridfunctions(\"AUX\",\"alpha\")\n",
-    "betaU   = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"betaU\",DIM=3)\n",
-    "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"gammaDD\", \"sym01\",DIM=3)\n",
-    "gammaUU, gammadet = ixp.symm_matrix_inverter3x3(gammaDD)\n"
+    "#Step 4: Declare the basic spacetime quantities\n",
+    "alpha   = sp.symbols(\"alpha\",real=True)\n",
+    "betaU   = ixp.declarerank1(\"betaU\",DIM=3)\n",
+    "gammaDD = ixp.declarerank2(\"gammaDD\", \"sym01\",DIM=3)\n",
+    "\n",
+    "import GRHD.equations as GRHD\n",
+    "GRHD.compute_sqrtgammaDET(gammaDD)\n"
    ]
   },
   {
@@ -228,21 +220,21 @@
     "import WeylScal4NRPy.WeylScalars_Cartesian as weyl\n",
     "LeviCivitaSymbolDDD = weyl.define_LeviCivitaSymbol_rank3()\n",
     "LeviCivitaTensorUUU = ixp.zerorank3()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        for k in range(DIM):\n",
-    "            LeviCivitaTensorUUU[i][j][k] = LeviCivitaSymbolDDD[i][j][k] / sp.sqrt(gammadet)\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        for k in range(3):\n",
+    "            LeviCivitaTensorUUU[i][j][k] = LeviCivitaSymbolDDD[i][j][k] / GRHD.sqrtgammaDET\n",
     "\n",
     "# For the initial data, we can analytically take the derivatives of A_i\n",
     "ADdD = ixp.zerorank2()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
     "        ADdD[i][j] = sp.simplify(sp.diff(AD[i],rfm.xxCart[j]))\n",
     "                                  \n",
     "BU = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        for k in range(DIM):\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        for k in range(3):\n",
     "            BU[i] += LeviCivitaTensorUUU[i][j][k] * ADdD[k][j]\n"
    ]
   },
@@ -264,21 +256,21 @@
     "# Step 4b: Calculate B^2 and B_i\n",
     "# B^2 is an inner product defined in the usual way:\n",
     "B2 = sp.sympify(0)\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
     "        B2 += gammaDD[i][j] * BU[i] * BU[j]\n",
     "        \n",
     "# Lower the index on B^i\n",
     "BD = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
     "        BD[i] += gammaDD[i][j] * BU[j]\n",
     "\n",
     "# Step 4c: Calculate the Valencia 3-velocity \n",
     "ValenciavU = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        for k in range(DIM):\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        for k in range(3):\n",
     "            ValenciavU[i] += LeviCivitaTensorUUU[i][j][k]*ED[j]*BD[k]/B2\n"
    ]
   },
@@ -325,87 +317,10 @@
     "\n",
     "print(\"Consistency check between GiRaFFEfood_NRPy tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
-    "for i in range(DIM):\n",
+    "for i in range(3):\n",
     "\n",
     "    print(\"ValenciavU[\"+str(i)+\"] - gfho.ValenciavU[\"+str(i)+\"] = \" + str(ValenciavU[i] - gfho.ValenciavU[i]))\n",
     "    print(\"AD[\"+str(i)+\"] - gfho.AD[\"+str(i)+\"] = \" + str(AD[i] - gfho.AD[i]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='si'></a>\n",
-    "\n",
-    "# Step 5: Build the expression for $\\tilde{S}_i$ \\[Back to [top](#toc)\\]\n",
-    "$$\\label{si}$$\n",
-    "\n",
-    "We will now find the densitized Poynting flux given by equation 21 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf), $$\\boxed{\\tilde{S}_i = \\gamma_{ij} \\frac{(v^j+\\beta^j)\\sqrt{\\gamma}B^2}{4 \\pi \\alpha}.}$$ This is needed to set initial data for $\\tilde{S}_i$ after $B^i$ is set from the initial $A_i$. Note, however, that this expression uses the drift velocity $v^i = \\alpha v^i_{(n)} - \\beta^i$; substituting this into the definition of $\\tilde{S}_i$ yields an expression in terms of the Valencia velocity: $$\\tilde{S}_i = \\gamma_{ij} \\frac{v^j_{(n)} \\sqrt{\\gamma}B^2}{4 \\pi}.$$\n",
-    "\n",
-    "* Initial data require only that the spatial vector potential $A_i$, the densitized zeroth-component of the vector potential $[\\sqrt{\\gamma}\\Phi]$, and the Valencia 3-velocity $v^i_{(n)}$ be set. However, the velocity is not an evolved quantity; $\\tilde{S}_i$ is the evolved quantity. We can set $\\tilde{S}_i$ initially based on the given initial data via $\\tilde{S}_i=\\gamma_{ij} \\frac{v^j_{(n)} \\sqrt{\\gamma}B^2}{4 \\pi}$.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 5: Build the expression for \\tilde{S}_i\n",
-    "StildeD = ixp.zerorank1()\n",
-    "BU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"BU\") # Reset so that NRPy will access stored values of BU\n",
-    "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"ValenciavU\") # Reset so that NRPy will access stored values of ValenciavU\n",
-    "B2 = sp.sympify(0)\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        B2 += gammaDD[i][j] * BU[i] * BU[j]\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        StildeD[i] += gammaDD[i][j] * (ValenciavU[j])*sp.sqrt(gammadet)*B2/4/M_PI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='code_validation2'></a>\n",
-    "\n",
-    "## Step 5.a: Code Validation against `GiRaFFEfood_NRPy.GiRaFFEfood_NRPy` NRPy+ module \\[Back to [top](#toc)\\]\n",
-    "$$\\label{code_validation2}$$\n",
-    "\n",
-    "Here, as a code validation check, we verify agreement in the SymPy expressions for the `GiRaFFE` Exact Wald initial data equations  we intend to use between\n",
-    "1. this tutorial and \n",
-    "2. the NRPy+ [GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_Exact_Wald](../edit/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_Exact_Wald.py) module.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Consistency check between GiRaFFEfood_NRPy tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
-      "StildeD[0] - gfho.StildeD[0] = 0\n",
-      "StildeD[1] - gfho.StildeD[1] = 0\n",
-      "StildeD[2] - gfho.StildeD[2] = 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Reset the list of gridfunctions, as registering a gridfunction\n",
-    "#   twice will spawn an error.\n",
-    "gri.glb_gridfcs_list = []\n",
-    "\n",
-    "#import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy as gfho\n",
-    "gfho.GiRaFFEfood_NRPy_ID_converter()\n",
-    "\n",
-    "print(\"Consistency check between GiRaFFEfood_NRPy tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
-    "\n",
-    "for i in range(DIM):\n",
-    "    print(\"StildeD[\"+str(i)+\"] - gfho.StildeD[\"+str(i)+\"] = \" + str(StildeD[i] - gfho.StildeD[i]))"
    ]
   },
   {
@@ -423,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
