GiRaFFEfood_NRPy: Fixed bugs in all three current initial datas. Refined unit test.

--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_Exact_Wald.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_Exact_Wald.ipynb
@@ -101,10 +101,9 @@
     "# Step 1a: Set commonly used parameters.\n",
     "thismodule = \"GiRaFFEfood_NRPy\"\n",
     "\n",
-    "# Step 1b: Set needed Cparameters\n",
-    "M    = par.Cparameters(\"REAL\",thismodule,[\"M\"],1.0)      # The mass of the black hole\n",
-    "M_PI = par.Cparameters(\"#define\",thismodule,[\"M_PI\"],\"\") # pi, 3.141592...\n",
-    "KerrSchild_radial_shift = par.Cparameters(\"REAL\",thismodule,\"KerrSchild_radial_shift\",0.4) # Default value for ExactWald"
+    "# KerrSchild_radial_shift = par.Cparameters(\"REAL\",thismodule,\"KerrSchild_radial_shift\",0.4) # Default value for ExactWald\n",
+    "KerrSchild_radial_shift = sp.symbols(\"KerrSchild_radial_shift\")\n",
+    "M = sp.symbols(\"M\") # Black hole mass"
    ]
   },
   {
@@ -306,12 +305,8 @@
     }
    ],
    "source": [
-    "# Reset the list of gridfunctions, as registering a gridfunction\n",
-    "#   twice will spawn an error.\n",
-    "gri.glb_gridfcs_list = []\n",
-    "\n",
     "import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_Exact_Wald as gfho\n",
-    "gfho.GiRaFFEfood_NRPy_Exact_Wald()\n",
+    "gfho.GiRaFFEfood_NRPy_Exact_Wald(gammaDD,M,KerrSchild_radial_shift)\n",
     "\n",
     "print(\"Consistency check between GiRaFFEfood_NRPy tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
@@ -336,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
